--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ sudo: required
 services:
   - docker
 
-before-install:
+before_install:
   - docker build -t lavalife/docker-react -f dev.Dockerfile .
 
 script:
