--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - docker build -t lavalife/docker-react -f dev.Dockerfile .
 
 script:
-  - docker run lavalife/docker-react npm run test -- --coverage
+  - docker run lavalife/docker-react npm run test
 
 deploy:
   provider: elasticbeanstalk
